--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "local": "^0.3.3",
     "mongoose": "^7.1.0",
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.6.1"
   },
