--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "local": "^0.3.3",
     "mongoose": "^7.1.0",
     "mongoose-paginate-v2": "^1.7.1",
