--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "local": "^0.3.3",
     "mongoose": "^7.1.0",
     "mongoose-paginate-v2": "^1.7.1",
+    "moongose": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
