--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "commander": "^11.0.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
+    "docker": "^1.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-compression": "^1.0.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "kubectl": "^0.0.0",
     "local": "^0.3.3",
     "mongoose": "^7.1.0",
     "mongoose-paginate-v2": "^1.7.1",
